// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General Creators .setStartedWorkout should return action with a type of WORKOUT_STATUS 1`] = `
Object {
  "payload": Object {
    "status": "started",
  },
  "type": "WORKOUT_STATUS",
}
`;

exports[`General Creators .startWorkout should return action with a type of WORKOUT_STATUS 1`] = `
Object {
  "payload": Object {
    "status": "starting",
  },
  "type": "WORKOUT_STATUS",
}
`;

exports[`General Creators .startWorkoutWithCountdown creates 2 WORKOUT_STATUS actions when dispatching 1`] = `
Array [
  Object {
    "payload": Object {
      "status": "starting",
    },
    "type": "WORKOUT_STATUS",
  },
  Object {
    "payload": Object {
      "status": "started",
    },
    "type": "WORKOUT_STATUS",
  },
]
`;
